// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonText control to the left 1`] = `
<ButtonText
  className="test-class"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={0}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "borderColor": "green",
      "color": "white",
    }
  }
  testing={true}
  text="test text"
  theme={Object {}}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <styled.div
      className="ui-button-text ripple test-class"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "blue",
          "borderColor": "green",
          "color": "white",
        }
      }
      visible={true}
    >
      <div
        className="ui-button-text ripple test-class sc-htpNat jFqZUF"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "blue",
            "borderColor": "green",
            "color": "white",
          }
        }
      >
        <styled.div
          justify={0}
          sizing="normal"
        >
          <div
            className="sc-bwzfXH gAHIyx"
          >
            test text
          </div>
        </styled.div>
        <Icon
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "hoverColor": "#c0c0c0",
              }
            }
          >
            <Icon__FontAwesome
              className="ui-icon fa fa-fw fa-bomb"
              sizing="normal"
              style={Object {}}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb Icon__FontAwesome-kBRBjz jFGZDN"
                style={Object {}}
              />
            </Icon__FontAwesome>
          </ThemeProvider>
        </Icon>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonText>
`;

exports[`Test disabling of a ButtonText control 1`] = `
<ButtonText
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={1}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  theme={Object {}}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <styled.div
      className="ui-button-text nohover"
      disabled={true}
      onClick={[Function]}
      style={Object {}}
      visible={true}
    >
      <div
        className="ui-button-text nohover sc-htpNat cRHVNF"
        disabled={true}
        onClick={[Function]}
        style={Object {}}
      >
        <Icon
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "hoverColor": "#c0c0c0",
              }
            }
          >
            <Icon__FontAwesome
              className="ui-icon fa fa-fw fa-bomb"
              sizing="normal"
              style={Object {}}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb Icon__FontAwesome-kBRBjz jFGZDN"
                style={Object {}}
              />
            </Icon__FontAwesome>
          </ThemeProvider>
        </Icon>
        <styled.div
          justify={1}
          sizing="normal"
        >
          <div
            className="sc-bwzfXH haMvSN"
          />
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonText>
`;

exports[`Test making a ButtonText control invisible 1`] = `
<ButtonText
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={1}
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  theme={Object {}}
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <styled.div
      className="ui-button-text ripple"
      disabled={false}
      onClick={[Function]}
      style={Object {}}
      visible={false}
    >
      <div
        className="ui-button-text ripple sc-htpNat eQFPbH"
        disabled={false}
        onClick={[Function]}
        style={Object {}}
      >
        <Icon
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={Object {}}
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "hoverColor": "#c0c0c0",
              }
            }
          >
            <Icon__FontAwesome
              className="ui-icon fa fa-fw fa-bomb"
              sizing="normal"
              style={Object {}}
            >
              <i
                className="ui-icon fa fa-fw fa-bomb Icon__FontAwesome-kBRBjz jFGZDN"
                style={Object {}}
              />
            </Icon__FontAwesome>
          </ThemeProvider>
        </Icon>
        <styled.div
          justify={1}
          sizing="normal"
        >
          <div
            className="sc-bwzfXH haMvSN"
          />
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonText>
`;

exports[`Test retrieval of ButtonText props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "id": "",
  "imageFile": "",
  "justify": 1,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noicon": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "text": "",
  "theme": Object {},
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
